// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueSummary Component renders correctly when issueNote prop exists 1`] = `
<div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <span
      className="newIssueTitle title"
    />
    <span
      className="newIssueSummaryEdit"
      id="issueType"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <div
      className="newIssueTitle"
    >
      <span
        className="title"
      >
        Urgency Level
      </span>
      <span
        className="status status--undefined"
      />
    </div>
    <span
      className="newIssueSummaryEdit"
      id="urgency"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <span
      className="newIssueTitle msgbox"
    >
      <p>
        
      </p>
    </span>
    <span
      className="newIssueSummaryEdit"
      id="attachments"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`IssueSummary Component renders issue text passed down as props 1`] = `
<div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <span
      className="newIssueTitle title"
    >
      property damage
    </span>
    <span
      className="newIssueSummaryEdit"
      id="issueType"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <div
      className="newIssueTitle"
    >
      <span
        className="title"
      >
        Urgency Level
      </span>
      <span
        className="status status--undefined"
      />
    </div>
    <span
      className="newIssueSummaryEdit"
      id="urgency"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <span
      className="newIssueTitle msgbox"
    >
      <p>
        
      </p>
    </span>
    <span
      className="newIssueSummaryEdit"
      id="attachments"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;

exports[`IssueSummary Component renders urgency className and text passed down as props 1`] = `
<div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <span
      className="newIssueTitle title"
    />
    <span
      className="newIssueSummaryEdit"
      id="issueType"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <div
      className="newIssueTitle"
    >
      <span
        className="title"
      >
        Urgency Level
      </span>
      <span
        className="status status--high"
      >
        high
      </span>
    </div>
    <span
      className="newIssueSummaryEdit"
      id="urgency"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="newIssueSummaryInfo padding--1em"
  >
    <span
      className="newIssueTitle msgbox"
    >
      <p>
        
      </p>
    </span>
    <span
      className="newIssueSummaryEdit"
      id="attachments"
      role="presentation"
    >
      <span
        className="icon icon--pencil"
      >
        <svg
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M42.9 17.2L12.4 47.7c-.6.6-1.4 1-2.3 1.1l-9 .9c-.4 0-.8-.3-.7-.7l.9-9c.1-.9.5-1.7 1.1-2.3L32.9 7.2l10 10zm1.5-1.5l-10-10 4.4-4.4c.5-.5 1.4-.5 1.9 0l8.1 8.1c.5.5.5 1.4 0 1.9l-4.4 4.4z"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
